--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <title>Moshy Basher</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <meta name="HandheldFriendly" content="True">
+    <meta name="MobileOptimized" content="320">
+    <meta http-equiv="cleartype" content="on">
     <style>
       html, body {
         height: 100%;
@@ -16,11 +19,11 @@
         color: #eee;
       }
     </style>
-  </head>
+</head>
 
-  <body>
-    <!--<script src="temp/phaser.min.js"></script>-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/phaser-ce/2.8.2/phaser.min.js"></script>
-    <script src="build/app.js"></script>
-  </body>
+<body>
+    <div id="content"></div>
+    <script src="dist/vendor.bundle.js"></script>
+    <script src="dist/bundle.js"></script>
+</body>
 </html>
